--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<main>
 		<div class="container">
-			<div class="row justify-content-center justify-content-sm-between">
+			<div class="row justify-content-center main-wrapper justify-content-sm-between">
 				<div class="col-6 col-sm-4 col-md-3 col-xl-2">
 					<div class="category">
 						<div class="category-title">
@@ -81,7 +81,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-12 col-sm-6 col-md-9 col-xl-10">
+				<div class="col-12 col-sm-6 col-md-9 col-xl-10 main-wrapper">
 					<div class="container">
 						<div class="row no-gutters goods-wrapper justify-content-center">
 							<!-- КАРТОЧКИ ТОВАРОВ -->
